--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "parcel src/index.html"
+    "start": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,22 @@
   },
   "homepage": "https://github.com/mikachoow21/CIS197-HW5#readme",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.18.8",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.0",
     "parcel": "^2.3.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
+  },
+  "devDependencies": {
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4 || ^3 || ^2.3.0 || ^1.7.0",
+    "process": "^0.11.10"
   }
 }
